Fix MultiAudioFilter
- Cosmetical changes
- v1.24.2.1